keycloak/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: unbe1iev-sso
spec:
  serviceName: "keycloak"
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: harbor.unbe1iev.com/unbe1iev-dev/keycloak:24.0.4
        command: ["/opt/keycloak/bin/kc.sh", "start", "--optimized"]
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8443
          name: https
        volumeMounts:
        - name: keycloak-pvc
          mountPath: /opt/keycloak/data
        - name: keycloak-certificates
          mountPath: /opt/keycloak/conf
          readOnly: true
        - name: keycloak-transaction-logs
          mountPath: /opt/keycloak/data/transaction-logs
        - name: keycloak-tmp
          mountPath: /opt/keycloak/data/tmp
          subPath: tmp
      imagePullSecrets:
      - name: harbor-secret
      volumes:
      - name: keycloak-certificates
        secret:
          secretName: sso-unbe1iev-com-tls
      - name: keycloak-pvc
        persistentVolumeClaim:
          claimName: keycloak-pvc
      - name: keycloak-transaction-logs
        emptyDir: {}
      - name: keycloak-tmp
        emptyDir: {}
