keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: unbe1iev-sso
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8443
    targetPort: 8443
  selector:
    app: keycloak
